# candlewick

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  inv_pendulum.xml  pixi.toml  process_shaders.py
.github/workflows/: check-changelog.yml  gh-pages.yml  macos-linux-windows-pixi.yml  update-lockfiles.yml
bindings/nanobind/: CMakeLists.txt  module.cpp
bindings/python/: CMakeLists.txt
bindings/python/candlewick/: __init__.py  async_visualizer.py  video_context.py
bindings/python/src/: expose-debug.cpp  expose-mesh-data.cpp  expose-recording.cpp  expose-renderer.cpp  expose-visualizer.cpp  module.cpp
doc/: Doxyfile.extra.in
examples/: CMakeLists.txt  ColoredCube.cpp  LitMesh.cpp  MeshNormalsRgb.cpp  Ur5WithSystems.cpp  Visualizer.cpp
examples/cpp/: LitMesh.cpp  Ur5WithSystems.cpp  Visualizer.cpp
examples/cpp/lib/: Common.cpp
examples/lib/: Common.cpp  Common.h
examples/python/: go2.py  inv_pendulum_mj.py  show_robot_description.py  ur10_loop.py  ur10_loop_force.py  ur3_async_runtime.py  utils.py
scripts/pixi/: activation.sh
shaders/: README.md
shaders/compiled/: BasicTriangle.vert.json  BasicTriangle.vert.msl  BasicTriangle.vert.spv  DrawQuad.vert.json  DrawQuad.vert.msl  DrawQuad.vert.spv  FrustumDebug.vert.json  FrustumDebug.vert.msl  FrustumDebug.vert.spv  Hud3dElement.frag.json  Hud3dElement.frag.msl  Hud3dElement.frag.spv  Hud3dElement.vert.json  Hud3dElement.vert.msl  Hud3dElement.vert.spv  PbrBasic.frag.json  PbrBasic.frag.msl  PbrBasic.frag.spv  PbrBasic.vert.json  PbrBasic.vert.msl  PbrBasic.vert.spv  PbrTransparent.frag.json  PbrTransparent.frag.msl  PbrTransparent.frag.spv  PointSprite.frag.json  PointSprite.frag.msl  PointSprite.frag.spv  PointSprite.vert.json  PointSprite.vert.msl  PointSprite.vert.spv  RenderDepth.frag.json  RenderDepth.frag.msl  RenderDepth.frag.spv  SSAO.frag.json  SSAO.frag.msl  SSAO.frag.spv  SSAOblur.frag.json  SSAOblur.frag.msl  SSAOblur.frag.spv  ScreenSpaceShadows.frag.json  (+27 more)
shaders/src/: BasicTriangle.vert.slang  DrawQuad.vert.slang  FrustumDebug.vert.slang  Hud3dElement.frag.slang  Hud3dElement.vert.slang  PBRTransparent.frag  PbrBasic.frag  PbrBasic.frag.slang  PbrBasic.vert  PbrBasic.vert.slang  PbrTransparent.frag  PbrTransparent.frag.slang  PointSprite.frag.slang  PointSprite.vert.slang  RenderDepth.frag  RenderDepth.frag.slang  SSAO.frag  SSAO.frag.slang  SSAOblur.frag.slang  ScreenSpaceShadows.frag.slang  ShadowArrayCast.vert  ShadowCast.frag.slang  ShadowCast.vert.slang  SolidColor.frag.slang  VertexColor.frag.slang  VertexColor.vert.slang  VertexNormal.frag.slang  VertexNormal.vert.slang  WBOITComposite.frag  WBOITComposite.frag.slang  config.glsl  config.slang  pbr_lighting.glsl  pbr_lighting.slang  tone_mapping.slang  utils.glsl  utils.slang
shaders/src/old/: ScreenSpaceShadows.frag  tone_mapping.glsl  utils.glsl
src/: CMakeLists.txt
src/candlewick/core/: Camera.h  Collision.h  CommandBuffer.cpp  CommandBuffer.h  Components.cpp  Components.h  Core.h  DebugScene.cpp  DebugScene.h  DepthAndShadowPass.cpp  DepthAndShadowPass.h  Device.cpp  Device.h  FileDialogGui.cpp  GraphicsPipeline.h  GuiSystem.cpp  GuiSystem.h  LightUniforms.h  LoadCoalGeometries.cpp  MaterialUniform.h  Mesh.cpp  Mesh.h  MeshLayout.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.h  errors.cpp  errors.h  file_dialog_gui.cpp  math_types.h
src/candlewick/core/debug/: DepthViz.cpp  DepthViz.h  Frustum.cpp  Frustum.h
src/candlewick/multibody/: Components.h  LoadCoalGeometries.cpp  LoadCoalGeometries.h  LoadCoalPrimitives.cpp  LoadCoalPrimitives.h  LoadPinocchioGeometry.cpp  LoadPinocchioGeometry.h  Multibody.h  RobotDebug.cpp  RobotDebug.h  RobotLoader.h  RobotScene.cpp  RobotScene.h  Visualizer.cpp  Visualizer.h  VisualizerClient.h  pinocchio_info_gui.cpp  visualizer_events_gui.cpp  visualizer_gui.cpp
src/candlewick/multibody/internal/: pinocchio_info_gui.cpp  visualizer_events_gui.cpp  visualizer_gui.cpp
src/candlewick/posteffects/: SSAO.cpp  SSAO.h  ScreenSpaceShadows.cpp  ScreenSpaceShadows.h
src/candlewick/primitives/: Heightfield.cpp
src/candlewick/runtime/: Messages.h  main.cpp  util.cpp
src/candlewick/utils/: FileDialogGui.cpp  FileDialogGui.h  LoadMaterial.cpp  LoadMesh.cpp  MeshData.cpp  MeshData.h  MeshDataView.cpp  MeshDataView.h  MeshTransforms.cpp  MeshTransforms.h  PixelFormatConversion.cpp  PixelFormatConversion.h  StridedView.h  VideoRecorder.cpp  VideoRecorder.h  WriteTextureToImage.cpp  WriteTextureToImage.h
src/fonts/: inter-medium.cpp
tests/: CMakeLists.txt  TestMeshData.cpp  TestShaderMetadata.cpp  TestStrided.cpp  test_async_client.py  test_client.py
tests/data/: no_resources.frag.json  one_ubuffer.vert.json  samplers_and_ubuffer.frag.json
